<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_label">Clock</string>
    <string name="default_label">Alarm</string>
    <string name="label_default">Default</string>
    <string name="label_off">Off</string>
    <string name="label_never">Never</string>
    <string name="label_none">None</string>
    <string name="label_cities">Cities</string>
    <string name="label_indefinitely">Indefinitely</string>
    <string name="delete">Delete</string>
    <string name="reset">Reset</string>
    <string name="label_new_image">New image</string>
    <string name="label_new_font">New font</string>
    <string name="info">Info</string>
    <string name="warning">Warning</string>
    <string name="label_hours">Hours</string>
    <string name="label_minutes">Minutes</string>
    <string name="label_seconds">Seconds</string>
    <string name="hours_minutes_seconds"><xliff:g example="2" id="hours">%1$d</xliff:g>:<xliff:g example="3" id="minutes">%2$02d</xliff:g>:<xliff:g example="44" id="seconds">%3$02d</xliff:g></string>
    <string name="minutes_seconds"><xliff:g example="3" id="minutes">%1$d</xliff:g>:<xliff:g example="44" id="seconds">%2$02d</xliff:g></string>
    <string name="seconds_only" translatable="false"><xliff:g example="44" id="seconds">%1$02d</xliff:g></string>
    <string name="hours_label">h</string>
    <string name="minutes_label">m</string>
    <string name="seconds_label">s</string>
    <string name="confirm_action_prompt">\n\nDo you want to continue?</string>
    <string name="add_label">Add label</string>
    <string name="label_description">Label</string>
    <string name="menu_alarm">Alarm</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_clock">Clock</string>
    <string name="menu_stopwatch">Stopwatch</string>
    <string name="timer_button_time_minutes_warning_box_text">Enter a value from 0 to 60 minutes</string>
    <string name="timer_button_time_seconds_warning_box_text">Enter a value from 0 to 59 seconds</string>
    <string name="timer_time_warning_box_title">Incorrect value entered</string>
    <string name="no_label_specified">No label specified</string>
    <string name="no_alarms">No Alarms</string>
    <string name="button_alarms">Add alarm</string>
    <string name="schedule_alarm_title">Schedule alarm</string>
    <string name="pause_alarm_title">Pause alarm</string>
    <string name="pause_alarm_range">Paused: %1$s</string>
    <string name="pause_alarm_info_message">Select days of the week to access this feature.</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="alarm_today">Today</string>
    <string name="alarm_scheduled_for">Scheduled for %s</string>
    <string name="alarm_alert_off_text">Alarm off</string>
    <string name="alarm_alert_off_and_deleted_text">Alarm off and deleted</string>
    <string name="alarm_alert_dismiss_text">Dismiss</string>
    <string name="alarm_alert_dismiss_and_delete_text">Dismiss &amp; Delete</string>
    <string name="alarm_alert_dismiss_and_delete_text_button">Dismiss &amp;\nDelete</string>
    <string name="alarm_missed_title">Missed alarm</string>
    <string name="alarm_missed_text"><xliff:g id="alarm_time">%1$s</xliff:g> - <xliff:g id="alarm_label">%2$s</xliff:g></string>
    <string name="alarm_alert_snoozed_text">Snoozed</string>
    <string name="alarm_alert_snooze_text">Snooze</string>
    <plurals name="alarm_alert_snooze_set">
        
        <item quantity="one">Snoozing for <xliff:g example="1" id="minutes">%d</xliff:g> minute.</item>
        
        <item quantity="other">Snoozing for <xliff:g example="10" id="minutes">%d</xliff:g> minutes.</item>
    </plurals>
    <string name="alarm_sound">Alarm sound</string>
    <string name="alarm_vibrate">Vibrate</string>
    <string name="alarm_flash">Flash</string>
    <string name="delete_occasional_alarm_after_use_title">Delete alarm once dismissed</string>
    <string name="delete_occasional_alarm_after_use_info_message">Deselect the days of the week to access this feature.</string>
    <string name="auto_silence_info_message">\"Silence after\" set to \"%s\".
        \n\nDisable the math hardness level to access this feature.
    </string>
    <string name="alarm_undo">undo</string>
    <string name="alarm_deleted">Alarm deleted</string>
    <string name="delay_picker_dialog_title">Alarm in…</string>
    <string name="date_picker_dialog_title">Select Date</string>
    <string name="alarm_label_box_title">Alarm label</string>
    <string name="sync_alarm_by_label_title">Synchronize alarms sharing the same label</string>
    <string name="alarm_alert_snooze_until">Snoozing until <xliff:g id="time">%s</xliff:g></string>
    <string name="alarm_alert_predismiss_title">Upcoming alarm</string>
    <string name="occasional_alarm_alert_predismiss_title">Upcoming occasional alarm</string>
    <string name="missed_alarm_has_been_deleted">Your missed alarm has been deleted</string>
    <string name="alarm_confirmation_toast_1">Alarm set for less than 1 minute from now.</string>
    <string name="alarm_confirmation_toast_2">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_3" tools:ignore="StringFormatCount">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_4">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_5" tools:ignore="StringFormatCount">Alarm set for <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_6" tools:ignore="StringFormatCount">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_7" tools:ignore="StringFormatCount">Alarm set for <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g> and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <string name="alarm_confirmation_toast_8">Alarm set for <xliff:g example="2 days" id="DAYS">%1$s</xliff:g>, <xliff:g example="2 hours" id="HOURS">%2$s</xliff:g>, and <xliff:g example="2 minutes" id="MINUTES">%3$s</xliff:g> from now.</string>
    <plurals name="days">
        
        <item quantity="one"><xliff:g example="1" id="number">%s</xliff:g> day</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> days</item>
    </plurals>
    <plurals name="hours">
        
        <item quantity="one"><xliff:g example="1" id="number">%s</xliff:g> hour</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hours</item>
    </plurals>
    <plurals name="hours_short">
        
        <item quantity="one"><xliff:g example="1" id="number">%s</xliff:g> hr</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> hr</item>
    </plurals>
    <plurals name="minutes">
        
        <item quantity="one"><xliff:g example="1" id="number">%s</xliff:g> minute</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> minutes</item>
    </plurals>
    <plurals name="minutes_short">
        
        <item quantity="one"><xliff:g example="1" id="number">%s</xliff:g> min</item>
        
        <item quantity="other"><xliff:g example="7" id="number">%s</xliff:g> min</item>
    </plurals>
    <string name="every_day">Every day</string>
    <string name="day_concat">", "</string>
    <string name="repeat_title">Repeat</string>
    <string name="repeat_type_once">Once</string>
    <string name="repeat_type_weekly">Weekly</string>
    <string name="repeat_type_workday">Workdays</string>
    <string name="repeat_type_shift">Shift</string>
    <string name="workday_repeat_summary">Statutory workdays</string>
    <string name="shift_repeat_summary">Work %1$d days, rest %2$d days</string>
    <string name="shift_cycle_title">Shift cycle</string>
    <string name="shift_work_days">Work days</string>
    <string name="shift_rest_days">Rest days</string>
    <string name="shift_start_date">Start date</string>
    <string name="shift_start_date_value">%1$s</string>
    <string name="alarm_volume_low">The alarm volume is low</string>
    <string name="fix_alarm_volume">Fix</string>
    <string name="alarms_blocked_by_dnd">Device is set to total silence</string>
    <string name="alarm_hours_warning_box_text">Enter a value from 0 to 24 hours</string>
    <string name="alarm_minutes_warning_box_text">Enter a value from 0 to 59 minutes</string>
    <string name="description_direction_both">Swipe left to snooze or right to dismiss</string>
    <string name="description_direction_both_for_occasional_alarm">Swipe left to snooze or right to dismiss and delete alarm</string>
    <string name="description_direction_both_for_non_repeatable_alarm">Swipe left or right to dismiss</string>
    <string name="description_direction_both_for_occasional_non_repeatable_alarm">Swipe left or right to dismiss and delete alarm</string>
    <string name="description_snooze_button">Click to snooze alarm</string>
    <string name="description_dismiss_button">Click to dismiss alarm</string>
    <string name="description_dismiss_button_for_occasional_alarm">Click to dismiss and delete alarm</string>
    <string name="next_alarm_description">Next alarm: <xliff:g example="Wed 8:00am" id="alarm_time">%s</xliff:g></string>
    <string name="invalid_time">Invalid time <xliff:g example="25" id="invalid_hour">%1$d</xliff:g>:<xliff:g example="63" id="invalid_minutes">%2$d</xliff:g> <xliff:g example="PM" id="invalid_ampm">%3$s</xliff:g></string>
    <string name="no_alarm_at">No alarm at <xliff:g example="14" id="alarm_time_hour">%1$d</xliff:g>:<xliff:g example="23" id="alarm_time_minutes">%2$d</xliff:g></string>
    <string name="no_scheduled_alarms">No scheduled alarms</string>
    <string name="no_alarms_with_label">No alarms contain the label</string>
    <string name="no_alarm_scheduled_for_this_time">No alarm scheduled for this time</string>
    <string name="alarm_is_dismissed"><xliff:g example="14:20" id="alarm_time">%s</xliff:g> alarm dismissed</string>
    <string name="repetitive_alarm_is_dismissed">Alarm dismissed. <xliff:g example="Next alarm Monday." id="alarm_day">Rescheduled for %s.</xliff:g></string>
    <string name="alarm_is_dismissed_and_deleted"><xliff:g example="14:20" id="alarm_time">%s</xliff:g> alarm dismissed and deleted</string>
    <string name="alarm_is_set">Alarm is set for <xliff:g example="14:20" id="alarm_time">%s</xliff:g></string>
    <string name="alarm_cant_be_dismissed_still_more_than_24_hours_away"><xliff:g example="14:20" id="alarm_time">%s</xliff:g> alarm can\'t be dismissed yet, still more than 24 hours away</string>
    <string name="dismiss_alarm">Dismiss alarm</string>
    <string name="lan_sync_general_category_title">General</string>
    <string name="lan_sync_enabled">Synchronize with other devices</string>
    <string name="lan_sync_enabled_summary_on">This device will announce itself on the local network and exchange data with detected devices</string>
    <string name="lan_sync_enabled_summary_off">Turn on to synchronize this device with others on the same network</string>
    <string name="lan_sync_device_name">Device name</string>
    <string name="lan_sync_port">Sync port</string>
    <string name="lan_sync_peers_category_title">Detected devices</string>
    <string name="lan_sync_peers">Devices on this network</string>
    <string name="lan_sync_now">Sync now</string>
    <string name="lan_sync_now_summary">Exchange data with all detected devices immediately</string>
</resources>