<?xml version="1.0" encoding="utf-8"?>
<!--
    SPDX-License-Identifier: GPL-3.0-only
-->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="?attr/dialogPreferredPadding"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_work_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_work_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/shift_work_days"
                android:inputType="number"
                android:maxLength="2"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_rest_days"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edit_rest_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/shift_rest_days"
                android:inputType="number"
                android:maxLength="2"
                tools:ignore="TextContrastCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="6dp"
            android:importantForAccessibility="no" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="?attr/selectableItemBackground"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/start_date_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_calendar_clock"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/shift_start_date"
                android:textSize="16sp"
                android:textColor="?android:attr/textColorSecondary"
                tools:ignore="RtlSymmetry" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/start_date_value"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|end"
                android:maxLines="1"
                android:ellipsize="end"
                tools:text="2026-01-01" />

        </LinearLayout>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
